--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -3,14 +3,18 @@
 layout: page
 ---
 {%- assign items = site.data[site.metadata] | where_exp: 'item', 'item.objectid != nil' -%}
-<div class="row">
-  <div class="col-md-8">
+<div class="col-md-12">
+
+  {% include index/data-download.html %}
+
+</div><div class="row">
+  <div class="col-md-6">
 
     {% include index/description.html %}
     {% include index/carousel.html title="Sample Items" height="300" %}
   
   </div>
-  <div class="col-md-4">  
+  <div class="col-md-6">  
 
     {% include index/time.html %}
 
@@ -21,9 +25,5 @@ layout: page
     {% include index/objects.html %}
 
   </div>
-  <div class="col-md-12">
-
-    {% include index/data-download.html %}
-
-  </div>
+  
 </div>
