--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -8,6 +8,8 @@ layout: page
   {% include index/data-download.html %}
 
 </div><div class="row">
+  </div>
+
   <div class="col-md-6">
 
     {% include index/description.html %}
